tests/paczka1/fuzzy1/13366232.err
Error in line 2: ftPa9Nfy5n A270 98,9
Error in line 12: RhkW2b2QdA A270 47,1
Error in line 5: A270 A443 92,4
Error in line 16: A270 A270 9,1
Error in line 21: 2yyePU9WkTO S945 20,1
